--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,20 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-2 col-md-1 col-lg-1"><a class="logo">Druide.</a></div>
-          <div class="col-2 col-md-4 col-lg-7"></div>
-          <div class="col-2 col-md-1 col-lg-1">Shop</div>
-          <div class="col-2 col-md-1 col-lg-1">Menu</div>
+          <div class="col-2 col-lg-1"><a class="logo">Druide.</a></div>
+          <div class="col-2 col-lg-7"></div>
+          <div class="col-2 col-lg-1">Shop</div>
+          <div class="col-2 col-lg-1">Menu</div>
         </div>
       </div>
     </header>
+    <main>
+      <div class="container">
+        <div class="row">
+          <div class="col-2 col-lg-6">         
+        </div>       
+      </div>
+    </main>
 
     <script src="js/main.js" type="module"></script>
   </body>
