fin de la grille

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="col-2 col-lg-1"><a class="logo">Druide.</a></div>
-          <div class="col-2 col-lg-7"></div>
+          <div class="col-6 col-lg-1">
+            <a class="logo">Druide.</a>
+          </div>
+          <div class="col-2 col-lg-9"></div>
           <div class="col-2 col-lg-1">Shop</div>
           <div class="col-2 col-lg-1">Menu</div>
         </div>
@@ -20,10 +22,121 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-2 col-lg-6">         
-        </div>       
+          <div class="col-6 col-lg-6"><img /></div>
+          <div class="col-6 col-lg-6">
+            <p class="news">Druide News</p>
+            <div class="row">
+              <div class="col-4 col-lg-4"></div>
+              <div class="col-4 col-lg-4"></div>
+              <div class="col-4 col-lg-4"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-5 col-lg-2">
+            <p class="presentation">Présentation</p>
+          </div>
+          <div class="col-1 col-lg-1"></div>
+          <div class="col-6 col-lg-9"></div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-7 col-lg-8">
+            <h1 class="craft-brewery">We are a craft brewery</h1>
+            <p class="craft-bewery-text">
+              We are proud to be a Craft Brewery because our beer is brewed by
+              ourselves, locally and in accordance with traditional processes: a
+              real craft beer.
+            </p>
+          </div>
+          <div class="col-5 col-lg-4"></div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-5 col-lg-9"></div>
+          <div class="col-2 col-lg-1"></div>
+          <div class="col-5 col-lg-2">
+            <p class="news-roducts">News Products</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <img>
+          </div>
+          <div class="col-12 col-lg-4">
+            <img>
+          </div>
+          <div class="col-12 col-lg-4">
+            <img>
+          </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-5 col-lg-9">
+            <p class="locations">Locations</p>
+          </div>
+          <div class="col-2 col-lg-1"></div>
+          <div class="col-5 col-lg-2"></div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-7">
+            <p class="find">Where to find us</p>
+            <img>
+          </div>
+          <div class="col-12 col-lg-5">
+            <img>
+          </div>
+        </div>
       </div>
     </main>
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-8">
+            <p class="newsletter">Sign up below and receive updates from Druid, including collection 
+              launches, early access to products and collaborations, and event invites.</p>
+            <a class="newsletter-mail">Enter your email adress</a>
+          </div>
+          <div class="col-12 col-lg-4">
+            <img>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-12">
+            <p class="help">help faq store shipping returns terms & conditions  privacy police cookies</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-12 col-lg-12">
+            <p class="copyright">@ 2022 Druide</p>
+            <img>
+            <img>
+            <img>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="js/main.js" type="module"></script>
   </body>
