--- a/src/index.html
+++ b/src/index.html
@@ -14,19 +14,23 @@
             <a class="logo">Druide.</a>
           </div>
           <div class="col-2 col-lg-9"></div>
-          <div class="col-2 col-lg-1">Shop</div>
-          <div class="col-2 col-lg-1">Menu</div>
+          <div class="col-2 col-lg-1">
+            <p class="shop">Shop</p>
+          </div>
+          <div class="col-2 col-lg-1">
+            <p class="burger-menu">Menu</p>
+          </div>
         </div>
       </div>
     </header>
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-6 col-lg-6"><img /></div>
+          <div class="col-6 col-lg-6"><img src="../img/bieres.jpg" /></div>
           <div class="col-6 col-lg-6">
             <p class="news">Druide News</p>
             <div class="row">
-              <div class="col-4 col-lg-4"></div>
+              <div class="col-4 col-lg-4"><img src="../img/druide.png" /></div>
               <div class="col-4 col-lg-4"></div>
               <div class="col-4 col-lg-4"></div>
             </div>
@@ -71,14 +75,33 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4">
-            <img>
+            <img src="../img/vanille.jpg" />
+            <div class="description-product">
+              <p class="beer">Druide.</p>
+              <p class="taste">
+                Vanille <a class="informations-product">335 ml vol.5% </a>
+              </p>
+            </div>
           </div>
           <div class="col-12 col-lg-4">
-            <img>
+            <img src="../img/cbd.jpg" />
+            <div class="description-product">
+              <p class="beer">Druide.</p>
+              <p class="taste">
+                Cbd <a class="informations-product">335 ml vol.5%</a>
+              </p>
+            </div>
           </div>
           <div class="col-12 col-lg-4">
-            <img>
+            <img src="../img/cerise.jpg" />
+            <div class="description-product">
+              <p class="beer">Druide.</p>
+              <p class="taste">
+                Cerise <a class="informations-product">335ml vol.5%</a>
+              </p>
+            </div>
           </div>
+        </div>
       </div>
 
       <div class="container">
@@ -94,11 +117,11 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-7">
-            <p class="find">Where to find us</p>
-            <img>
+            <p class="find-us">Where to find us</p>
+            <img />
           </div>
           <div class="col-12 col-lg-5">
-            <img>
+            <img />
           </div>
         </div>
       </div>
@@ -108,12 +131,15 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-8">
-            <p class="newsletter">Sign up below and receive updates from Druid, including collection 
-              launches, early access to products and collaborations, and event invites.</p>
+            <p class="newsletter">
+              Sign up below and receive updates from Druid, including collection
+              launches, early access to products and collaborations, and event
+              invites.
+            </p>
             <a class="newsletter-mail">Enter your email adress</a>
           </div>
           <div class="col-12 col-lg-4">
-            <img>
+            <img />
           </div>
         </div>
       </div>
@@ -121,7 +147,10 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-12">
-            <p class="help">help faq store shipping returns terms & conditions  privacy police cookies</p>
+            <p class="help">
+              help faq store shipping returns terms & conditions privacy police
+              cookies
+            </p>
           </div>
         </div>
       </div>
@@ -130,9 +159,9 @@
         <div class="row">
           <div class="col-12 col-lg-12">
             <p class="copyright">@ 2022 Druide</p>
-            <img>
-            <img>
-            <img>
+            <img />
+            <img />
+            <img />
           </div>
         </div>
       </div>
