class img nommé

--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,12 @@
           <div class="col-6 col-lg-6">
             <p class="news">Druide News</p>
             <div class="row">
-              <div class="col-4 col-lg-4"><img src="../img/druide.png" /></div>
-              <div class="col-4 col-lg-4"></div>
-              <div class="col-4 col-lg-4"></div>
+              <div class="col-4 col-lg-4">
+                <img class="img-druide" src="../img/druide.png" /></div>
+              <div class="col-4 col-lg-4">
+                <img class="img-gout" src="../img/gout.png" /></div>
+              <div class="col-4 col-lg-4">
+                <img class="img-verre" src="../img/verre.png" /></div>
             </div>
           </div>
         </div>
@@ -41,7 +44,7 @@
       <div class="container">
         <div class="row">
           <div class="col-5 col-lg-2">
-            <p class="presentation">Présentation</p>
+            <p class="presentation">Presentation</p>
           </div>
           <div class="col-1 col-lg-1"></div>
           <div class="col-6 col-lg-9"></div>
@@ -58,7 +61,8 @@
               real craft beer.
             </p>
           </div>
-          <div class="col-5 col-lg-4"></div>
+          <div class="col-5 col-lg-4">
+            <img class="img-chevalier" src="../img/chevalier.png" /></div>
         </div>
       </div>
 
@@ -75,7 +79,7 @@
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-4">
-            <img src="../img/vanille.jpg" />
+            <img class="img-vanille" src="../img/vanille.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
               <p class="taste">
@@ -84,7 +88,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-4">
-            <img src="../img/cbd.jpg" />
+            <img class="img-cbd" src="../img/cbd.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
               <p class="taste">
@@ -93,7 +97,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-4">
-            <img src="../img/cerise.jpg" />
+            <img class="img-cerise" src="../img/cerise.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
               <p class="taste">
@@ -118,28 +122,30 @@
         <div class="row">
           <div class="col-12 col-lg-7">
             <p class="find-us">Where to find us</p>
-            <img />
+            <img class="img-supermarche" src="../img/supermarche.png" />
           </div>
           <div class="col-12 col-lg-5">
-            <img />
+            <img class="img-carte" src="../img/carte.png" />
           </div>
         </div>
       </div>
     </main>
 
     <footer>
+      <div class="newsletter">
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-8">
-            <p class="newsletter">
+            <p class="newsletter-text">
               Sign up below and receive updates from Druid, including collection
               launches, early access to products and collaborations, and event
               invites.
             </p>
-            <a class="newsletter-mail">Enter your email adress</a>
+            <p class="newsletter-mail">Enter your email adress</p>
+            <img class="img-fleche" src="../img/fleche.png" />
           </div>
           <div class="col-12 col-lg-4">
-            <img />
+            <img class="im-amis" src="../img/amis-druide.png" />
           </div>
         </div>
       </div>
@@ -151,6 +157,7 @@
               help faq store shipping returns terms & conditions privacy police
               cookies
             </p>
+            <img class="img-clap" src="../img/clap-clap.png" />
           </div>
         </div>
       </div>
@@ -159,9 +166,9 @@
         <div class="row">
           <div class="col-12 col-lg-12">
             <p class="copyright">@ 2022 Druide</p>
-            <img />
-            <img />
-            <img />
+            <img class="img-twitter" src="../img/twitter-logo.png" />
+            <img class="linkedin" src="../img/linkedin-logo.png" />
+            <img class="img-insta" src="../img/insta-logo.png" />
           </div>
         </div>
       </div>
