--- a/src/index.html
+++ b/src/index.html
@@ -18,11 +18,14 @@
             <p class="shop">Shop</p>
           </div>
           <div class="col-2 col-lg-1">
-            <p class="burger-menu">Menu</p>
+            <div class="burger-menu">
+              <img src="../img/menu-burger.png">
+            </div>
           </div>
         </div>
       </div>
     </header>
+
     <main>
       <div class="container">
         <div class="row">
@@ -30,11 +33,11 @@
           <div class="col-6 col-lg-6">
             <p class="news">Druide News</p>
             <div class="row">
-              <div class="col-4 col-lg-4">
-                <img class="img-druide" src="../img/druide.png" /></div>
-              <div class="col-4 col-lg-4">
+              <div class="col-6 col-lg-6">
                 <img class="img-gout" src="../img/gout.png" /></div>
-              <div class="col-4 col-lg-4">
+                <div class="col-6 col-lg-6">
+                  <img class="img-druide" src="../img/druide.png" /></div>
+              <div class="verre col-3 col-lg-4">
                 <img class="img-verre" src="../img/verre.png" /></div>
             </div>
           </div>
@@ -46,7 +49,7 @@
           <div class="col-5 col-lg-2">
             <p class="presentation">Presentation</p>
           </div>
-          <div class="col-1 col-lg-1"></div>
+          <div class="gris col-1 col-lg-1"></div>
           <div class="col-6 col-lg-9"></div>
         </div>
       </div>
@@ -69,7 +72,7 @@
       <div class="container">
         <div class="row">
           <div class="col-5 col-lg-9"></div>
-          <div class="col-2 col-lg-1"></div>
+          <div class="gris col-2 col-lg-1"></div>
           <div class="col-5 col-lg-2">
             <p class="news-roducts">News Products</p>
           </div>
@@ -113,7 +116,7 @@
           <div class="col-5 col-lg-9">
             <p class="locations">Locations</p>
           </div>
-          <div class="col-2 col-lg-1"></div>
+          <div class="griscol-2 col-lg-1"></div>
           <div class="col-5 col-lg-2"></div>
         </div>
       </div>
