changement image bieres

--- a/src/index.html
+++ b/src/index.html
@@ -29,14 +29,14 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-6 col-lg-6"><img src="../img/bieres.jpg" /></div>
+          <div class="col-6 col-lg-6"><img src="../img/bieres.png" /></div>
           <div class="col-6 col-lg-6">
             <p class="news">Druide News</p>
             <div class="row">
               <div class="col-6 col-lg-6">
                 <img class="img-gout" src="../img/gout.png" /></div>
                 <div class="col-6 col-lg-6">
-                  <img class="img-druide" src="../img/druide.png" /></div>
+                <img class="img-druide" src="../img/druide.png" /></div>
               <div class="verre col-3 col-lg-4">
                 <img class="img-verre" src="../img/verre.png" /></div>
             </div>
