--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
           </div>
           <div class="col-2 col-lg-1">
             <div class="burger-menu">
-              <img src="../img/menu-burger.png">
+              <img src="../img/menu-burger.png" />
             </div>
           </div>
         </div>
@@ -33,12 +33,15 @@
           <div class="col-6 col-lg-6">
             <p class="news">Druide News</p>
             <div class="row">
-              <div class="col-6 col-lg-6">
-                <img class="img-gout" src="../img/gout.png" /></div>
-                <div class="col-6 col-lg-6">
-                <img class="img-druide" src="../img/druide.png" /></div>
-              <div class="verre col-3 col-lg-4">
-                <img class="img-verre" src="../img/verre.png" /></div>
+              <div class="col-6 col-lg-4">
+                <img class="img-gout" src="../img/gout.png" />
+              </div>
+              <div class="col-6 col-lg-4">
+                <img class="img-druide" src="../img/druide.png" />
+              </div>
+              <div class="col-4 col-lg-4 verre">
+                <img class="img-verre" src="../img/verre.png" />
+              </div>
             </div>
           </div>
         </div>
@@ -65,16 +68,17 @@
             </p>
           </div>
           <div class="col-5 col-lg-4">
-            <img class="img-chevalier" src="../img/chevalier.png" /></div>
+            <img class="img-chevalier" src="../img/chevalier.png" />
+          </div>
         </div>
       </div>
 
       <div class="container">
         <div class="row">
-          <div class="col-5 col-lg-9"></div>
+          <div class="col-5 col-lg-8"></div>
           <div class="gris col-2 col-lg-1"></div>
-          <div class="col-5 col-lg-2">
-            <p class="news-roducts">News Products</p>
+          <div class="col-5 col-lg-3">
+            <p class="news-products">News Products</p>
           </div>
         </div>
       </div>
@@ -85,26 +89,28 @@
             <img class="img-vanille" src="../img/vanille.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
-              <p class="taste">
-                Vanille <a class="informations-product">335 ml vol.5% </a>
-              </p>
+              <a class="taste">Vanille</a>
+              <a class="informations-product">335 ml</a>
+              <a class="vol"> vol.5% </a>
             </div>
           </div>
+
           <div class="col-12 col-lg-4">
             <img class="img-cbd" src="../img/cbd.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
-              <p class="taste">
-                Cbd <a class="informations-product">335 ml vol.5%</a>
-              </p>
+              <a class="taste">Cbd</a>
+              <a class="informations-product">335 ml</a>
+              <a class="vol">vol.5%</a>
             </div>
           </div>
           <div class="col-12 col-lg-4">
             <img class="img-cerise" src="../img/cerise.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
-              <p class="taste">
-                Cerise <a class="informations-product">335ml vol.5%</a>
+              <p class="taste">Cerise 
+              <a class="informations-product">335ml 
+              <a class="vol">vol.5%</a>
               </p>
             </div>
           </div>
@@ -116,7 +122,7 @@
           <div class="col-5 col-lg-9">
             <p class="locations">Locations</p>
           </div>
-          <div class="griscol-2 col-lg-1"></div>
+          <div class="gris col-2 col-lg-1"></div>
           <div class="col-5 col-lg-2"></div>
         </div>
       </div>
@@ -135,7 +141,7 @@
     </main>
 
     <footer>
-      <div class="newsletter">
+      <div class="newsletter"></div>
       <div class="container">
         <div class="row">
           <div class="col-12 col-lg-8">
