--- a/src/index.html
+++ b/src/index.html
@@ -144,7 +144,7 @@
       <div class="newsletter"></div>
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-8">
+          <div class="col-12 col-lg-8 blue">
             <p class="newsletter-text">
               Sign up below and receive updates from Druid, including collection
               launches, early access to products and collaborations, and event
@@ -163,6 +163,7 @@
         <div class="row">
           <div class="col-12 col-lg-12">
             <p class="help">
+              
               help faq store shipping returns terms & conditions privacy police
               cookies
             </p>
