--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,11 @@
           <div class="col-6 col-lg-1">
             <a class="logo">Druide.</a>
           </div>
-          <div class="col-2 col-lg-9"></div>
-          <div class="col-2 col-lg-1">
+          <div class="col-2 col-lg-9 space"></div>
+          <div class="col-3 col-lg-1">
             <p class="shop">Shop</p>
           </div>
-          <div class="col-2 col-lg-1">
+          <div class="col-3 col-lg-1">
             <div class="burger-menu">
               <img src="../img/menu-burger.png" />
             </div>
@@ -29,14 +29,16 @@
     <main>
       <div class="container">
         <div class="row">
-          <div class="col-6 col-lg-6"><img src="../img/bieres.png" /></div>
-          <div class="col-6 col-lg-6">
+          <div class="col-6 col-lg-6 header-one-img">
+            <img src="../img/bieres.png" />
+          </div>
+          <div class="no-padding col-6 col-lg-6">
             <p class="news">Druide News</p>
-            <div class="row">
-              <div class="col-6 col-lg-4">
+            <div class="row news-row">
+              <div class="gout col-6 col-lg-4">
                 <img class="img-gout" src="../img/gout.png" />
               </div>
-              <div class="col-6 col-lg-4">
+              <div class="col-6 col-lg-4 druide">
                 <img class="img-druide" src="../img/druide.png" />
               </div>
               <div class="col-4 col-lg-4 verre">
@@ -49,17 +51,17 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-5 col-lg-2">
+          <div class="col-4 col-lg-3">
             <p class="presentation">Presentation</p>
           </div>
-          <div class="gris col-1 col-lg-1"></div>
-          <div class="col-6 col-lg-9"></div>
+          <div class="gris col-2 col-lg-2"></div>
+          <div class="col-6 col-lg-7"></div>
         </div>
       </div>
 
       <div class="container">
         <div class="row">
-          <div class="col-7 col-lg-8">
+          <div class="col-9 col-lg-8">
             <h1 class="craft-brewery">We are a craft brewery</h1>
             <p class="craft-bewery-text">
               We are proud to be a Craft Brewery because our beer is brewed by
@@ -67,25 +69,29 @@
               real craft beer.
             </p>
           </div>
-          <div class="col-5 col-lg-4">
+          <div class="col-3 col-lg-4 chevalier">
             <img class="img-chevalier" src="../img/chevalier.png" />
           </div>
         </div>
       </div>
 
+      <div class="etoile">
+        <img src="../img/etoile-new.png">
+      </div>
+
       <div class="container">
         <div class="row">
-          <div class="col-5 col-lg-8"></div>
-          <div class="gris col-2 col-lg-1"></div>
-          <div class="col-5 col-lg-3">
-            <p class="news-products">News Products</p>
+          <div class="col-4 col-lg-7"></div>
+          <div class="gris col-2 col-lg-2"></div>
+          <div class="col-6 col-lg-3">
+            <p class="products">Products</p>
           </div>
         </div>
       </div>
 
       <div class="container">
         <div class="row">
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 products-beer">
             <img class="img-vanille" src="../img/vanille.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
@@ -95,7 +101,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 products-beer">
             <img class="img-cbd" src="../img/cbd.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
@@ -104,14 +110,13 @@
               <a class="vol">vol.5%</a>
             </div>
           </div>
-          <div class="col-12 col-lg-4">
+          <div class="col-12 col-lg-4 products-beer">
             <img class="img-cerise" src="../img/cerise.jpg" />
             <div class="description-product">
               <p class="beer">Druide.</p>
-              <p class="taste">Cerise 
-              <a class="informations-product">335ml 
+              <a class="taste">Cerise</a>
+              <a class="informations-product">335ml </a>
               <a class="vol">vol.5%</a>
-              </p>
             </div>
           </div>
         </div>
@@ -119,10 +124,10 @@
 
       <div class="container">
         <div class="row">
-          <div class="col-5 col-lg-9">
+          <div class="col-6 col-lg-9">
             <p class="locations">Locations</p>
           </div>
-          <div class="gris col-2 col-lg-1"></div>
+          <div class="gris col-1 col-lg-1"></div>
           <div class="col-5 col-lg-2"></div>
         </div>
       </div>
@@ -133,7 +138,7 @@
             <p class="find-us">Where to find us</p>
             <img class="img-supermarche" src="../img/supermarche.png" />
           </div>
-          <div class="col-12 col-lg-5">
+          <div class="col-12 col-lg-5 map">
             <img class="img-carte" src="../img/carte.png" />
           </div>
         </div>
@@ -153,8 +158,8 @@
             <p class="newsletter-mail">Enter your email adress</p>
             <img class="img-fleche" src="../img/fleche.png" />
           </div>
-          <div class="col-12 col-lg-4">
-            <img class="im-amis" src="../img/amis-druide.png" />
+          <div class="col-12 col-lg-4 friends">
+            <img class="img-amis" src="../img/amis-druide.png" />
           </div>
         </div>
       </div>
@@ -163,9 +168,13 @@
         <div class="row">
           <div class="col-12 col-lg-12">
             <p class="help">
-              
-              help faq store shipping returns terms & conditions privacy police
+              <p class="colonne-1">
+              help faq store shipping returns 
+              </p>
+              <div class="colonne-2">
+              terms & conditions privacy police
               cookies
+            </div>
             </p>
             <img class="img-clap" src="../img/clap-clap.png" />
           </div>
@@ -176,9 +185,11 @@
         <div class="row">
           <div class="col-12 col-lg-12">
             <p class="copyright">@ 2022 Druide</p>
-            <img class="img-twitter" src="../img/twitter-logo.png" />
-            <img class="linkedin" src="../img/linkedin-logo.png" />
-            <img class="img-insta" src="../img/insta-logo.png" />
+            <div class="container-reseaux">
+              <img class="img-twitter" src="../img/twitter-logo.png" />
+              <img class="linkedin" src="../img/linkedin-logo.png" />
+              <img class="img-insta" src="../img/insta-logo.png" />
+            </div>
           </div>
         </div>
       </div>
